--- a/debian/control
+++ b/debian/control
@@ -2,10 +2,7 @@ Source: python-dbus-next
 Section: python
 Priority: optional
 Maintainer: Sebastien Laclau <seb.laclau@gmail.com>
-Build-Depends: python3-all, dh-python, debhelper-compat (= 13),
- python3-pytest,
- python3-pytest-timeout,
- python3-pytest-asyncio
+Build-Depends: python3-all, dh-python, debhelper-compat (= 13)
 
 Package: python3-dbus-next
 Architecture: any
