--- a/debian/rules
+++ b/debian/rules
@@ -1,7 +1,9 @@
 #!/usr/bin/make -f
 
 export DH_VERBOSE=1
+export PYBUILD_DISABLE=test
 export PYBUILD_NAME=bleak
+
 
 %:
 	dh $@ --with python3 --buildsystem=pybuild
