--- a/.github/workflows/build-debian.yml
+++ b/.github/workflows/build-debian.yml
@@ -19,18 +19,20 @@ jobs:
           echo $GPG_KEY_ID
           echo "${{ secrets.PPA_GPG_PRIVATE_KEY }}" | gpg --batch --import
       - name: Build
-        run: dpkg-buildpackage
+        run: |
+          dpkg-buildpackage
+          mv ../fortius-ant_*.* .
       - name: Upload debian package
         uses: actions/upload-artifact@v3
         with:
           name: ${{ matrix.os }}
           path: |
-            ../fortius-ant*.deb
-            ../fortius-ant*.dsc
-            ../fortius-ant*.tar.xz
-            ../fortius-ant*.changes
+            fortius-ant*.deb
+            fortius-ant*.dsc
+            fortius-ant*.tar.xz
+            fortius-ant*.changes
       - name: Publish package to prerelease PPA
         run: |
           sudo apt install dput
-          dput ppa:slaclau/ppa-pre ../fortius-ant*source.changes
+          dput ppa:slaclau/ppa-pre fortius-ant*source.changes
         if: github.ref == 'refs/heads/master' 
