--- a/.github/workflows/build-debian.yml
+++ b/.github/workflows/build-debian.yml
@@ -20,7 +20,8 @@ jobs:
           echo "${{ secrets.PPA_GPG_PRIVATE_KEY }}" | gpg --batch --import
       - name: Build
         run: |
-          dpkg-buildpackage
+          dpkg-buildpackage -S -sa
+          dpkg-buildpackage -b
           mv ../python-dbus-next_*.* .
       - name: Upload debian package
         uses: actions/upload-artifact@v3
