--- a/debian/control
+++ b/debian/control
@@ -2,7 +2,11 @@ Source: python-dbus-next
 Section: python
 Priority: optional
 Maintainer: Sebastien Laclau <seb.laclau@gmail.com>
-Build-Depends: python3-all, dh-python, debhelper-compat (= 13)
+Build-Depends:
+ dh-python,
+ debhelper-compat (= 13),
+ python3,
+ python3-setuptools
 
 Package: python3-dbus-next
 Architecture: any
