--- a/.github/workflows/build-debian.yml
+++ b/.github/workflows/build-debian.yml
@@ -20,6 +20,7 @@ jobs:
           echo "${{ secrets.PPA_GPG_PRIVATE_KEY }}" | gpg --batch --import
       - name: Build
         run: |
+          python3 updateChangelog.py 
           dpkg-buildpackage -S -sa
           dpkg-buildpackage -b
           mv ../python-dbus-next_*.* .
