--- a/.github/workflows/build-debian.yml
+++ b/.github/workflows/build-debian.yml
@@ -5,7 +5,11 @@ on:
   
 jobs:
   build:
-    runs-on: ubuntu-latest
+    runs-on: ${{ matrix.os }}
+    
+    strategy:
+      matrix:
+        os: [ubuntu-22.04, ubuntu-20.04]
     steps:
       - name: Checkout
         uses: actions/checkout@v3
@@ -27,7 +31,7 @@ jobs:
       - name: Upload debian package
         uses: actions/upload-artifact@v3
         with:
-          name: Debian
+          name: ${{ matrix.os }}
           path: |
             python-dbus-next*.deb
             python-dbus-next*.dsc
