--- a/.github/workflows/build-debian.yml
+++ b/.github/workflows/build-debian.yml
@@ -15,7 +15,7 @@ jobs:
         uses: actions/checkout@v3
       - name: Get build dependencies
         run: |
-          sudo apt install pbuilder
+          sudo apt install pbuilder devscripts equivs
           sudo mk-build-deps -i -t "apt-get -o Debug::pkgProblemResolver=yes --no-install-recommends -y"
       - name: Make source
         run: |
