--- a/.github/workflows/build-debian.yml
+++ b/.github/workflows/build-debian.yml
@@ -28,7 +28,7 @@ jobs:
           echo "${{ secrets.PPA_GPG_PRIVATE_KEY }}" | gpg --batch --import
       - name: Build
         run: |
-          pbuild --distribution codename ../*dsc --buildresult ..
+          pbuilder --distribution codename ../*dsc --buildresult ..
           mv ../python-dbus-next_*.* .
       - name: Upload debian package
         uses: actions/upload-artifact@v3
