--- a/.github/workflows/build-debian.yml
+++ b/.github/workflows/build-debian.yml
@@ -19,7 +19,7 @@ jobs:
           sudo mk-build-deps -i -t "apt-get -o Debug::pkgProblemResolver=yes --no-install-recommends -y"
       - name: Make source
         run: |
-          python3 updateChangelog.py codename
+          python3 updateChangelog.py ${{ matrix.codename }}
           dpkg-buildpackage -S -sa
       - name: Import key
         run: |
@@ -28,7 +28,7 @@ jobs:
           echo "${{ secrets.PPA_GPG_PRIVATE_KEY }}" | gpg --batch --import
       - name: Build
         run: |
-          pbuilder --distribution codename ../*dsc --buildresult ..
+          pbuilder --distribution ${{ matrix.codename }} ../*dsc --buildresult ..
           mv ../python-dbus-next_*.* .
       - name: Upload debian package
         uses: actions/upload-artifact@v3
