--- a/.github/workflows/build-debian.yml
+++ b/.github/workflows/build-debian.yml
@@ -34,6 +34,7 @@ jobs:
             --distribution ${{ matrix.codename }} \
             --buildresult .. \
             ../*dsc
+          debsign ../*.changes
           mv ../python*.* .
       - name: Upload debian package
         uses: actions/upload-artifact@v3
