--- a/.github/workflows/build-debian.yml
+++ b/.github/workflows/build-debian.yml
@@ -21,12 +21,14 @@ jobs:
         run: |
           python3 updateChangelog.py ${{ matrix.codename }}
           dpkg-buildpackage -S -sa
+          mkdir source
+          mv ../python*.* source/
       - name: Import key
         run: |
           GPG_KEY_ID=$(echo "${{ secrets.PPA_GPG_PRIVATE_KEY }}" | gpg --import-options show-only --import | sed -n '2s/^\s*//p')
           echo $GPG_KEY_ID
           echo "${{ secrets.PPA_GPG_PRIVATE_KEY }}" | gpg --batch --import
-          debsign ../*.changes
+          debsign source/*.changes
       - name: Build
         run: |
           sudo pbuilder create \
@@ -34,14 +36,16 @@ jobs:
           sudo pbuilder build \
             --distribution ${{ matrix.codename }} \
             --buildresult .. \
-            ../*dsc
-          mv ../python*.* .
+            ../source/*dsc
+          mkdir binary
+          mv ../python*.* binary/
       - name: Upload debian package
         uses: actions/upload-artifact@v3
         with:
           name: ${{ matrix.codename }}
           path: |
-            python*
+            source
+            binary
       - name: Publish package to prerelease PPA
         run: |
           sudo apt install dput
