--- a/.github/workflows/build-debian.yml
+++ b/.github/workflows/build-debian.yml
@@ -36,7 +36,7 @@ jobs:
           sudo pbuilder build \
             --distribution ${{ matrix.codename }} \
             --buildresult .. \
-            ../source/*dsc
+            source/*dsc
           mkdir binary
           mv ../python*.* binary/
       - name: Upload debian package
